# fun_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fun_project/: config_model.py  etl_munger.py
fun_project/examples/: example_get_objects.py  example_write_file.py  simple_config.yaml  simple_csv.csv
src/: config_model.py  etl_munger.py  operations.py
src/example/: simple_csv.csv  simple_example.py
tests/: config_test.py  file_load_test.py  validation_test.py
tests/test_files/: test_csv.csv
